crates/djls-semantic/tests/snapshots/corpus__repos__horizon__horizon__templatetags__angular.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "horizon.templatetags.angular::tag::angular_templates":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
filter_arities:
  "horizon.templatetags.angular::filter::angular_escapes":
    expects_arg: false
    arg_optional: false
block_specs: {}
