crates/djls-semantic/tests/snapshots/corpus__repos__horizon__horizon__templatetags__bootstrap.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "horizon.templatetags.bootstrap::tag::bs_progress_bar":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: args
        required: false
        kind: VarArgs
        position: 0
    as_var: keep
filter_arities: {}
block_specs: {}
