crates/djls-semantic/tests/snapshots/corpus__repos__horizon__horizon__templatetags__branding.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "horizon.templatetags.branding::tag::site_branding":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "horizon.templatetags.branding::tag::site_branding_link":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
filter_arities: {}
block_specs: {}
