crates/djls-semantic/tests/snapshots/corpus__repos__horizon__horizon__templatetags__horizon.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "horizon.templatetags.horizon::tag::datepicker_locale":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "horizon.templatetags.horizon::tag::horizon_dashboard_nav":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
  "horizon.templatetags.horizon::tag::horizon_main_nav":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
  "horizon.templatetags.horizon::tag::horizon_nav":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
  "horizon.templatetags.horizon::tag::load_config":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "horizon.templatetags.horizon::tag::quotapercent":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: used
        required: true
        kind: Variable
        position: 0
      - name: limit
        required: true
        kind: Variable
        position: 1
    as_var: strip
  "horizon.templatetags.horizon::tag::template_cache_age":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
filter_arities:
  "horizon.templatetags.horizon::filter::has_permissions":
    expects_arg: true
    arg_optional: false
  "horizon.templatetags.horizon::filter::has_permissions_on_list":
    expects_arg: true
    arg_optional: false
  "horizon.templatetags.horizon::filter::quota":
    expects_arg: true
    arg_optional: true
  "horizon.templatetags.horizon::filter::quotainf":
    expects_arg: true
    arg_optional: true
block_specs:
  "horizon.templatetags.horizon::tag::jstemplate":
    end_tag: endjstemplate
    intermediates: []
    opaque: false
  "horizon.templatetags.horizon::tag::minifyspace":
    end_tag: endminifyspace
    intermediates: []
    opaque: false
