crates/djls-semantic/tests/snapshots/corpus__repos__horizon__horizon__templatetags__shellfilter.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "horizon.templatetags.shellfilter::filter::shellfilter":
    expects_arg: false
    arg_optional: false
block_specs: {}
