crates/djls-semantic/tests/snapshots/corpus__repos__horizon__horizon__templatetags__sizeformat.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "horizon.templatetags.sizeformat::filter::diskgbformat":
    expects_arg: false
    arg_optional: false
  "horizon.templatetags.sizeformat::filter::mb_float_format":
    expects_arg: false
    arg_optional: false
  "horizon.templatetags.sizeformat::filter::mbformat":
    expects_arg: false
    arg_optional: false
block_specs: {}
