crates/djls-semantic/tests/snapshots/corpus__repos__horizon__horizon__templatetags__truncate_filter.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "horizon.templatetags.truncate_filter::filter::truncate":
    expects_arg: true
    arg_optional: false
block_specs: {}
